added forgot password to send email for OTP and Documentation
